なぜかナビゲーションバーがuserimagesのdefaulticonを読み込んでいた不具合を修正

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     <div class="container-fluid">
       <% if user_signed_in? %>
         <%= link_to pages_path, class: "link" do %>
-          <%= image_tag "/user_images/default_icon.png", class: "amica_icon" %>
+          <%= image_tag "default_icon.png", class: "amica_icon" %>
         <% end %>
         <%= link_to pages_path, class: "link" do %>
           <h2 style="margin-left:2px;margin-top: 8px;color: rgba(29,144,190,0.8)">Amica</h2>
