--- a/app/views/chats/_chat_message.html.erb
+++ b/app/views/chats/_chat_message.html.erb
@@ -72,8 +72,13 @@
             <% else %>
               <%= image_tag image, style:"max-width:100%", "data-lity" => "data-lity"%>
             <% end %>
-          <% elsif message.file_name != nil %>
-            <a href=<%= message.decorate.files %> download="<%= message.file_name%>"><%= message.file_name%></a>
+            <% elsif message.content == "ファイルを送信しました。" %>
+            <% file = ActiveStorage::Blob.find_by(filename: message.file_name) %>
+            <% if file.nil?%>
+              <%=safe_join(message.content.split("\n"),tag(:br))%>
+            <% else %>
+              <a href=<%= rails_blob_url(file, disposition: "attachment") %> download="<%= message.file_name[1..message.file_name.length]%>"><%= message.file_name[1..message.file_name.length]%></a>
+            <% end %>
           <% else %>
             <% start = message.content.index("http")%>
             <div>
