--- a/app/views/devise/confirmations/show.html.erb
+++ b/app/views/devise/confirmations/show.html.erb
@@ -6,7 +6,7 @@
 
 <div class="container" style="max-width: 960px">
   <div class="py-5 text-center">
-    <%= image_tag "/user_images/default_icon.png", class: "d-block mx-auto mb-4", width: "100" %>
+    <%= image_tag "default_icon.png", class: "d-block mx-auto mb-4", width: "100" %>
     <h2>新規登録</h2>
     <p class="lead">Amicaへようこそ！<br/>Amicaを利用する前にあなたのことを教えて下さい！<br/>公平性を保つため、虚偽の入力はしないでください。</p>
   </div>
