--- a/app/views/notifications/_notification.html.erb
+++ b/app/views/notifications/_notification.html.erb
@@ -10,6 +10,6 @@
   </div>
   <div class="d-block">
     <div class="text-gray small" style="text-align: right">
-      <i class="far fa-clock clock-icon"></i><%= time_ago_in_words(notification.created_at) %></div>
+      <i class="far fa-clock clock-icon" style="margin-right: 3px"></i><%= time_ago_in_words(notification.created_at) %></div>
   </div>
 </div>
