--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -1,15 +1,15 @@
 <style>
-  .flash{
-      display: none;
-  }
+    .flash {
+        display: none;
+    }
 </style>
 
-<%= render "notifications/nav", notifications:@notifications %>
+<%= render "notifications/nav", notifications: @notifications, information: @info_show_count %>
 
 <div class="container">
   <% if @notification.exists? %>
     <%= render partial: "notifications/notification", collection: @pagenate, as: :notification, locals: { new_notification: @new_notification } %>
-    <%= render "layouts/pagenate", pagenate:@pagenate %>
+    <%= render "layouts/pagenate", pagenate: @pagenate %>
   <% else %>
     <p class="text-center my-4">通知はありません</p>
   <% end %>
