運営からのメッセージとお知らせで分離化

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -139,7 +139,8 @@
       <div class="col mt-3">
         <h5 class="mb-2">コンテンツ</h5>
         <p class="mb-1 small"><%= link_to "通知", notifications_path, class: "text-decoration-none text-light" %></p>
-        <p class="mb-1 small"><%= link_to "運営からのお知らせ", about_path, class: "text-decoration-none text-light" %></p>
+        <p class="mb-1 small"><%= link_to "運営からのメッセージ", whispers_path, class: "text-decoration-none text-light" %></p>
+        <p class="mb-1 small"><%= link_to "お知らせ", informations_path, class: "text-decoration-none text-light" %></p>
         <p class="mb-1 small"><%= link_to "チュートリアル", tutorial_pages_path, class: "text-decoration-none text-light" %></p>
         <p class="mb-1 small"><%= link_to "ランキング", ranking_index_path, class: "text-decoration-none text-light" %></p>
       </div>
