--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -4,7 +4,7 @@
     }
 </style>
 
-<%= render "notifications/nav", notifications: @notifications, information: @info_show_count %>
+<%= render "notifications/nav", notifications: @notifications, information: @info_show_count, whisper: @whispers, page: "notification" %>
 
 <div class="container">
   <% if @notification.exists? %>
