運営からのメッセージ完成(遅延でコミットできてなかった)

--- a/app/views/informations/index.html.erb
+++ b/app/views/informations/index.html.erb
@@ -4,7 +4,7 @@
     }
 </style>
 
-<%= render "notifications/nav", notifications: @notifications, information: @info_show_count %>
+<%= render "notifications/nav", notifications: @notifications, information: @info_show_count, whisper: @whisper, page: "information" %>
 
 <div class="container">
   <% if @informations.exists? %>
