--- a/app/views/whispers/show.html.erb
+++ b/app/views/whispers/show.html.erb
@@ -1,2 +1,15 @@
-<h1>Whispers#show</h1>
-<p>Find me in app/views/whispers/show.html.erb</p>
+<div class="container">
+  <div class="p-3 my-3 text-dark rounded shadow-sm" style="min-height: 300px">
+    <div class="time text-end">
+      <i class="far fa-clock clock-icon" style="margin-right: 3px"></i><%= @whisper.created_at.strftime('%F') %>
+    </div>
+    <div class="text-center">
+      <h1><%= @whisper.title %></h1>
+    </div>
+
+    <hr />
+    <p><%= link(h(@whisper.content).html_safe).gsub(/\r\n|\r|\n/, "<br />").html_safe %></p>
+    <p class="text-end">Avails</p>
+
+  </div>
+</div>
