--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -10,7 +10,7 @@
           <div class="d-flex pt-3">
             <%= image_tag r.decorate.image, class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "40px", height: "40px" %>
             <p class="pb-3 mb-0 w-100">
-              <strong class="d-block" style="color: black"><%= r.name %> (<%= r.nickname %>)</strong>
+              <strong class="d-block" style="color: black"><%= r.decorate.name %> (<%= r.decorate.nickname %>)</strong>
               <% if @latest_message[i] === '' %>
                 <span class="medium lh-sm" style="float: right;color: black">※このユーザーとはまだ会話したことがないようです！会話してみましょう！※</span>
                 <span class="clear"></span>
