--- a/app/views/timelines/_post.html.erb
+++ b/app/views/timelines/_post.html.erb
@@ -72,7 +72,7 @@
           <%= image_tag post.user.decorate.image, class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "40px", height: "40px" %>
         <% end %>
         <p class="pb-3 mb-0 lh-sm w-100">
-          <strong class="text-dark" style="font-size:20px;margin: 0"><%= post.user.nickname %></strong>
+          <strong class="text-dark" style="font-size:20px;margin: 0"><%= post.user.decorate.nickname %></strong>
           <span class="text-gray small" style="margin: 0">@<%= post.user.userid %></span>
           <span class="text-gray small"><i class="far fa-clock clock-icon"></i><%= time_ago_in_words(post.created_at) %></span>
           <br/>
@@ -87,52 +87,54 @@
         <% end %>
       </div>
 
-      <div class="d-flex justify-content-between" style="margin-left: 45px">
-        <div class="d-flex">
-      <span class="likes mx-1">
-        <% if current_user.liked_by?(post.id) %>
-          <%= button_to timeline_like_path(post.id, current_user.id), method: :delete, remote: true, class: "send bg-white", style: "height: 15.5px;padding: 0", data: { disable_with: "<i class='far fa-heart'></i> <span class='text-dark'>#{post.likes.size - 1}</span>" } do %>
-            <i class="fas fa-heart"></i>
-            <span class='text-dark'><%= post.likes.size %></span>
-          <% end %>
-        <% else %>
-          <%= button_to timeline_likes_path(post.id), method: :post, remote: true, class: "send bg-white", style: "height: 15.5px;padding: 0", data: { disable_with: "#{push(current_user)} <span class='text-dark'>#{post.likes.size + 1}</span>" } do %>
-            <i class="far fa-heart"></i>
-            <span class='text-dark'><%= post.likes.size %></span>
-          <% end %>
-        <% end %>
-      </span>
-          <span class="comments">
-        <%= link_to timeline_path(post.id) do %>
-          <i class="far fa-comment-alt" style="height: 15.5px"></i>
-          <span class="text-dark" id="comment_count"><%= post.comments.size %></span>
-        <% end %>
-      </span>
-        </div>
-        <div class="d-flex">
-          <% if post.user == current_user %>
-            <%= button_to(timeline_path(post.id), class: "send bg-white", method: :delete, data: { disable_with: "削除中..." }) do %>
-              <i class="far fa-trash-alt"></i>
-            <% end %>
-          <% else %>
-            <% if mute?(post, current_user) %>
-              <%= button_to timeline_mute_path(post.id, current_user.id), class: "send bg-white", style: "padding-right:0px", method: :delete, data: { disable_with: '<i class="fas fa-volume-mute" style="color: red"></i>' } do %>
-                <i class="fas fa-volume-up"></i>
+      <% unless post.user.discarded? %>
+        <div class="d-flex justify-content-between" style="margin-left: 45px">
+          <div class="d-flex">
+            <span class="likes mx-1">
+              <% if current_user.liked_by?(post.id) %>
+                <%= button_to timeline_like_path(post.id, current_user.id), method: :delete, remote: true, class: "send bg-white", style: "height: 15.5px;padding: 0", data: { disable_with: "<i class='far fa-heart'></i> <span class='text-dark'>#{post.likes.size - 1}</span>" } do %>
+                  <i class="fas fa-heart"></i>
+                  <span class='text-dark'><%= post.likes.size %></span>
+                <% end %>
+              <% else %>
+                <%= button_to timeline_likes_path(post.id), method: :post, remote: true, class: "send bg-white", style: "height: 15.5px;padding: 0", data: { disable_with: "#{push(current_user)} <span class='text-dark'>#{post.likes.size + 1}</span>" } do %>
+                  <i class="far fa-heart"></i>
+                  <span class='text-dark'><%= post.likes.size %></span>
+                <% end %>
+              <% end %>
+            </span>
+            <span class="comments">
+              <%= link_to timeline_path(post.id) do %>
+                <i class="far fa-comment-alt" style="height: 15.5px"></i>
+                <span class="text-dark" id="comment_count"><%= post.comments.size %></span>
+              <% end %>
+            </span>
+          </div>
+          <div class="d-flex">
+            <% if post.user == current_user %>
+              <%= button_to(timeline_path(post.id), class: "send bg-white", method: :delete, data: { disable_with: "削除中..." }) do %>
+                <i class="far fa-trash-alt"></i>
               <% end %>
             <% else %>
-              <%= button_to timeline_mute_index_path(post.id), class: "send bg-white", style: "padding-right:0px", method: :post, data: { disable_with: '<i class="fas fa-volume-up"></i>' } do %>
-                <i class="fas fa-volume-mute" style="color: red"></i>
+              <% if mute?(post, current_user) %>
+                <%= button_to timeline_mute_path(post.id, current_user.id), class: "send bg-white", style: "padding-right:0px", method: :delete, data: { disable_with: '<i class="fas fa-volume-mute" style="color: red"></i>' } do %>
+                  <i class="fas fa-volume-up"></i>
+                <% end %>
+              <% else %>
+                <%= button_to timeline_mute_index_path(post.id), class: "send bg-white", style: "padding-right:0px", method: :post, data: { disable_with: '<i class="fas fa-volume-up"></i>' } do %>
+                  <i class="fas fa-volume-mute" style="color: red"></i>
+                <% end %>
               <% end %>
-            <% end %>
-            <span class="ms-2">
+              <span class="ms-2">
               <label>
                 <button type="button" class="btn btn-primary" style="display: none" data-bs-toggle="modal" data-bs-target="#exampleModal<%= post.id %>" data-bs-whatever=<%= post.id %>></button>
                 <i class="fas fa-bullhorn" style="color: red"></i>
               </label>
             </span>
-          <% end %>
+            <% end %>
+          </div>
         </div>
-      </div>
+      <% end %>
     </div>
   </div>
 </div>
