--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,21 +1,21 @@
-<p class="h1 mt-4" style="font-weight: normal; text-align: center;">パスワードをお忘れですか？</p>
-<div class="text-center mt-5">
+<div class="container">
+  <p class="h1 mt-4" style="font-weight: normal; text-align: center;">パスワードをお忘れですか？</p>
+  <div class="text-center mt-5">
 
-  <p class="vw"><%= "以下のEメールアドレスにメールを送信します。PCやモバイル機器を使ってメール" %>
+    <p class="vw">以下のEメールアドレスにメールを送信します。<br />PCやモバイル機器を使ってメールに記載されているリンクを開き、パスワード変更を行ってください。</p>
+
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
+
+      <div class="form-check-inline w-50 mt-5">
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", id: "inputEmail", class: "form-control", :placeholder => "email", style: "margin-bottom: 30px" %>
+      </div>
+
+      <div class="actions mt-3">
+        <%= f.submit "送信", class: "w-25 btn btn-lg btn-primary " %>
+      </div>
+    <% end %>
     <br>
-    <%= "に記載されているリンクを開き、パスワード変更を行ってください。" %></p>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="form-check-inline w-50 mt-5">
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", id: "inputEmail", class: "form-control",:placeholder=>"email" ,style: "margin-bottom: 30px" %>
+    <%= render "devise/shared/links" %>
   </div>
-
-  <div class="actions mt-3">
-    <%= f.submit "送信" , class:"w-25 btn btn-lg btn-primary "%>
-  </div>
-<% end %>
-<br>
-<%= render "devise/shared/links" %>
 </div>
