--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,21 +1,21 @@
-<p class="h1 mt-4" style="font-weight: normal; text-align: center;">ロック解除のメールを受け取りませんでしたか？</p>
-<div class="text-center mt-5">
+<div class="container">
+  <p class="h1 mt-4" style="font-weight: normal; text-align: center;">ロック解除のメールを受け取りませんでしたか？</p>
+  <div class="text-center mt-5">
 
-  <p class="vw"><%= "ここではメールアドレスがロックされているかどうかの確認を取ることができ" %>
+    <p class="vw">ここではメールアドレスがロックされているかどうかの確認を取ることができます。<br />＠の後に、指定されたドメインを入れてください。</p>
+
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
+
+      <div class="form-check-inline w-50 mt-5">
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", id: "inputEmail", class: "form-control", :placeholder => "email", style: "margin-bottom: 30px" %>
+      </div>
+
+      <div class="actions mt-3">
+        <%= f.submit "送信", class: "w-25 btn btn-lg btn-primary " %>
+      </div>
+    <% end %>
     <br>
-    <%= "ます。＠の後に、指定された「gn.iwasaki.ac.jp」を入れてください。" %></p>
-
-  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
-
-    <div class="form-check-inline w-50 mt-5">
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", id: "inputEmail", class: "form-control",:placeholder=>"email" ,style: "margin-bottom: 30px" %>
-    </div>
-
-    <div class="actions mt-3">
-      <%= f.submit "送信" , class:"w-25 btn btn-lg btn-primary "%>
-    </div>
-  <% end %>
-  <br>
-<%= render "devise/shared/links" %>
+    <%= render "devise/shared/links" %>
+  </div>
 </div>
