--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -99,7 +99,7 @@
         <% elsif (m.created_at.to_date - last_message.to_date).to_i >= 1 %>
           <div class="date"><%= m.created_at.strftime("%m月%d日") %></div>
         <% end %>
-        <%= render 'chats/chat_message', message: m %>
+        <%= render 'chats/chat_message', message:m , user: m.user_id === current_user.id %>
         <% last_message = m.created_at %>
       <% end %>
       <div id="append" class="col-sm-12"></div>
