--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -4,71 +4,7 @@
         display: none;
     }
 </style>
-<!-- menuModal -->
-<div class="modal fade" id="menuModal" tabindex="-1" aria-labelledby="menuModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="menuModalLabel">menu</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <div class="container">
-          <div class=" mb-0 d-flex ">
-            <div class="modal-item shadow-sm mb-5 bg-body rounded">
-              <%= link_to chats_path, class: " modal-icons nav-link" do %>
-                <i class="fas fa-comments"></i>
-                <p class="small">チャット</p>
-              <% end %>
-            </div>
-            <div class="modal-item shadow-sm mb-5 bg-body rounded">
-              <%= link_to communities_path, class: "modal-icons nav-link" do %>
-                <i class="fas fa-users"></i>
-                <p class="small">コミュニティ</p>
-              <% end %>
-            </div>
-          </div>
-          <div class="mb-0 d-flex ">
-            <div class="modal-item shadow-sm  mb-5 bg-body rounded">
-              <%= link_to timelines_path, class: "modal-icons nav-link" do %>
-                <i class="fas fa-clock"></i>
-                <p class="small">タイムライン</p>
-              <% end %>
-            </div>
-            <div class="modal-item shadow-sm  mb-5 bg-body rounded">
-              <%= link_to profiles_path, class: "modal-icons nav-link" do %>
-                <i class="fas fa-address-card"></i>
-                <p class="small">友達</p>
-              <% end %>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 
-<!-- fileModal -->
-<div class="modal fade" id="fileModal" tabindex="-1" aria-labelledby="fileModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="fileModalLabel">ファイル送信</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <input type="file" id="file_uploader" data-behavior="chat_speaker">
-      </div>
-      <img id="preview" src="" style="text-align: center; display: none;">
-      <div class="modal-footer">
-        <label><!-- Button trigger modal -->
-          <button id="file_submit_button" style="display: none" type="submit" class="btn btn-primary form-control"></button>
-          <span class="m-1" style="font-size: 1.6rem;color: #1b8798"><i class="fas fa-paper-plane"></i></span>
-        </label>
-      </div>
-    </div>
-  </div>
-</div>
 <script>
     window.addEventListener('load', function bottom_scroll() {
         var elm = document.documentElement;
@@ -77,75 +13,28 @@
     });
 </script>
 
+<%= render "chats/menu_modal" %>
+<%= render "chats/file_modal" %>
+<%= render "chats/nav", user:@user %>
 
-<nav class="nav nav-underline border-bottom w-100" id="chatnav" style="background-color: #fff; height: 30px; border-bottom: solid 1px rgba(29, 144, 190, 0.8);">
-  <div style="margin-left:12px">
-    <span>チャット相手 : </span>
-    <span><%= @user.decorate.name %></span>
-    <span class="small" style="color: gray">(<%= @user.decorate.nickname %>)</span>
-  </div>
-</nav>
 
 <div class="container" id="body">
   <div id="chat" style="margin:1% 1% 70px 1%">
     <div id="messages">
-      <% last_message = nil %>
+      <% date_time = nil %>
       <% @message.each do |m| %>
-        <% if last_message == nil %>
-          <% last_message = m.created_at %>
-        <% end %>
-        <% if m.created_at - last_message == 0 %>
-          <div class="date"><%= m.created_at.strftime("%m月%d日") %></div>
-        <% elsif (m.created_at.to_date - last_message.to_date).to_i >= 1 %>
-          <div class="date"><%= m.created_at.strftime("%m月%d日") %></div>
-        <% end %>
+        <% date_time = m.created_at if date_time == nil %>
+        <div class="date">
+          <% if m.created_at - date_time == 0 || (m.created_at.to_date - date_time.to_date).to_i >= 1 %>
+            <%= m.created_at.strftime("%m月%d日") %>
+          <% end %>
+        </div>
         <%= render 'chats/chat_message', message:m , user: m.user_id === current_user.id %>
-        <% last_message = m.created_at %>
+        <% date_time = m.created_at %>
       <% end %>
       <div id="append" class="col-sm-12"></div>
     </div>
   </div>
-
-
-  <div class="mt-2 row messageBox reply d-flex justify-content-center">
-    <div class="col-sm-12 messageBox-inner">
-      <span class="clear"></span>
-      <div class="row ">
-        <% if blocked?(current_user, @user) %>
-          <div style="text-align: center">
-            <span>ユーザーをブロックしています</span>
-          </div>
-        <% elsif blocked?(@user, current_user) %>
-          <div style="text-align: center">
-            <span>ユーザーにブロックされています</span>
-          </div>
-        <% elsif @user.discarded? %>
-          <div style="text-align: center">
-            <span>退会済みユーザーです</span>
-          </div>
-        <% else %>
-          <div class="w-100 d-flex">
-            <label>
-              <button id="file_button" style="display: none" type="button" class="btn btn-primary form-control" data-bs-toggle="modal" data-bs-target="#fileModal"></button>
-              <span class="m-1" style="font-size: 1.4rem;color: #f0c065"><i class="fas fa-upload"></i></span>
-            </label>
-            <input type="hidden" id="room_id" value=<%= @room.id %> data-behavior="chat_speaker">
-            <input type="hidden" id="user_id" value=<%= current_user.id %> data-behavior="chat_speaker">
-            <input type="hidden" id="partner_userid" value=<%= @user.userid %>>
-            <input type="hidden" id="partner_image" value=<%= @user.decorate.image %>>
-            <%= text_area_tag :content, nil, class: "form-control", placeholder: "message", data: { behavior: "chat_speaker" }, id: "content" %>
-            <label><!-- Button trigger modal -->
-              <button id="submit_button" style="display: none" type="submit" class="btn btn-primary form-control"></button>
-              <span class="m-1" style="font-size: 1.6rem;color: #1b8798"><i class="fas fa-paper-plane"></i></span>
-            </label>
-            <label>
-              <button style="display: none" type="button" class="btn btn-primary form-control" data-bs-toggle="modal" data-bs-target="#menuModal"></button>
-              <span class="m-1" style="font-size: 1.6rem;color: #5e5e5e"> <i class="fas fa-th-large"></i></span>
-            </label>
-        <% end %>
-        </div>
-      </div>
-    </div>
-  </div>
+  <%= render "chats/form", user:@user, room: @room%>
 </div>
 
