--- a/app/views/chats/_form.html.erb
+++ b/app/views/chats/_form.html.erb
@@ -2,9 +2,9 @@
   <div class="col-sm-12 messageBox-inner">
     <span class="clear"></span>
     <div class="row">
-      <% if blocked?(@user, current_user) ||  @user.discarded? || blocked?(current_user, @user) %>
+      <% if blocked?(user, current_user) || user.discarded? || blocked?(current_user, user) %>
         <div style="text-align: center">
-          <span><%= not_send_message(@user) %></span>
+          <span><%= not_send_message(user) %></span>
         </div>
       <% else %>
         <div class="w-100 d-flex">
@@ -15,8 +15,7 @@
           <input type="hidden" id="room_id" value=<%= room.id %> data-behavior="chat_speaker">
           <input type="hidden" id="user_id" value=<%= current_user.id %> data-behavior="chat_speaker">
           <input type="hidden" id="partner_userid" value=<%= user.userid %>>
-          <input type="hidden" id="partner_image" value=<%= user.decorate.image %>>
-          <input type="hidden" id="content_type" value="text" data-behavior="chat_speaker">
+          <input type="hidden" id="partner_image" value=<%= user.image.attached? ? url_for(user.image) : "/default_icon.png" %>>
           <%= text_area_tag :content, nil, class: "form-control", placeholder: "message", data: { behavior: "chat_speaker" }, id: "content" %>
           <label>
             <button id="submit_button" style="display: none" type="submit" class="btn btn-primary form-control"></button>
