--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -24,12 +24,10 @@
       <% date_time = nil %>
       <% @message.each do |m| %>
         <% date_time = m.created_at if date_time == nil %>
-        <div class="date">
           <% if m.created_at - date_time == 0 || (m.created_at.to_date - date_time.to_date).to_i >= 1 %>
-            <%= m.created_at.strftime("%m月%d日") %>
+            <div class="date"><%= m.created_at.strftime("%m月%d日") %></div>
           <% end %>
-        </div>
-        <%= render 'chats/chat_message', message:m , user: m.user_id === current_user.id %>
+        <%= render 'chats/chat_message', message: m, user: m.user_id === current_user.id %>
         <% date_time = m.created_at %>
       <% end %>
       <div id="append" class="col-sm-12"></div>
