新しいバッジを作成

--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -149,7 +149,14 @@
                         </div>
                         <div class="collapse" id="collapseTen" aria-labelledby="headingTen" data-parent="#faqAccordion">
                           <div class="card-body">
-                            <p>A.バッジには特別な効果はありませんが、今後なにか追加されるかもしれません。バッジはAmicaの一つの遊び要素です。</p>
+                            <p>A.バッジには特別な効果はありませんが、今後なにか追加されるかもしれません。バッジはAmicaの一つの遊び要素です。<br/>
+                              バッジにはレア度があります。<br/>
+                              青 : 普通<br/>
+                              オレンジ : レア<br/>
+                              赤 : 激レア<br/>
+                              その他 : 特別<br/>
+                              レアなバッジをたくさん集めてAmicaをもっと楽しもう！
+                            </p>
                           </div>
                         </div>
                       </div>
