--- a/app/views/mailer/new.html.erb
+++ b/app/views/mailer/new.html.erb
@@ -13,7 +13,7 @@
       <%= f.email_field :email, autofocus: true, autocomplete: "email" , id: "inputEmail", class: "form-control",style: "height: 25px"%><br />
       <%= f.label "お問い合わせ内容" %><br />
       <%= f.text_area :message , id: "inputEmail", class: "form-control", required: true%><br>
-      <%= f.submit "送信", class:"btn btn-lg btn-secondary fw-bold border-white bg-blue" ,style: "margin-right: 10px; width: 150px;color:#FFF"%>
+      <%= f.submit "送信", class:"btn btn-lg btn-secondary fw-bold border-white bg-blue" ,style: "margin-right: 10px; width: 150px;color:#FFF", data: { disable_with: "送信中..." }%>
       <%= f.submit "クリア" ,type: :reset , class:"btn btn-lg btn-secondary fw-bold border-white bg-blue",style: "margin-right: 10px; width: 150px;color:#FFF"%>
     <% end %>
   </div>
